# bugi

./: .gitignore  Cargo.toml  README.md
example_files/: beam.bbnd  cantilever.bbnd  hole.bmsh  hollow.bbnd  skew_constraint.bmsh  square.bmsh  swiss.bbnd  test_bound.bbnd
src/: cli.yml  lib.rs  main.rs
src/element/: constraint.rs  element.rs  integrate.rs  isopar.rs  loading.rs  material.rs  mod.rs  strain.rs  stress.rs  tests.rs
src/file/: bbnd.rs  bmsh.rs  mod.rs
src/matrix/: buffer.rs  graph.rs  inverse.rs  mod.rs  norm.rs  sparse.rs  tests.rs
src/matrix/solve/: direct.rs  eigen.rs  iterative.rs  mod.rs
src/mesher/: bounds.rs  mod.rs  plane.rs
src/spatial/: hull.rs  mod.rs  predicates.rs
src/visual/: bresenham.rs  color.rs  fill.rs  mod.rs  tests.rs
