[package]
name = "bugi"
version = "0.1.0"
authors = ["Xanzis <xander@hughes-family.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
clap = {version = "~2.27.0", features = ["yaml"]}
fastrand = "1.5.0"

[profile.release]
panic = 'abort'